# accfg-artifacts

./: .gitignore  .gitmodules  Containerfile  README.md  commit-snax_cluster  get_all_numbers.py  hello-world.sh  increase_memory.patch  install_snax_patched.sh  pyproject.toml  run-all.sh  setup.py
.github/workflows/: gemmini-experiments.yaml  snax-experiments.yaml
accfg_artifacts/: gemmini_get_all_numbers.py  get_all_numbers.py  plot_gemmini.py  plot_snax.py  show_results.py
containers/: snax.Containerfile
