[project]
name = "accfg-artifacts"
version = "0.1.0"
description = "artifacts evaluation for accfg paper"
authors = [
    { name="Josse Van Delm", email="josse.vandelm@kuleuven.be" },
    { name="Anton Lydike", email="anton.lydike@ed.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "scipy==1.15.3"
]

[tool.setuptools]
packages = ["accfg_artifacts"]
